--- a/index.html
+++ b/index.html
@@ -3,184 +3,242 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>RSA QR App</title>
+  <title>RSA QR Tool</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.js"></script>
-  <style>[x-cloak]{display:none}</style>
 </head>
-<body class="bg-gray-100 font-sans">
-
-<!-- LOGIN SCREEN -->
-<div id="login-screen" class="min-h-screen flex items-center justify-center" x-cloak>
-  <div class="bg-white p-6 rounded-xl shadow-md w-80">
-    <h2 class="text-2xl font-bold text-center mb-4">🔐 Login</h2>
-    <input id="username" placeholder="Username" class="w-full border px-3 py-2 rounded mb-3" />
-    <input id="password" type="password" placeholder="Password" class="w-full border px-3 py-2 rounded mb-4" />
+<body class="bg-gray-100 p-6 font-sans">
+  <!-- LOGIN -->
+  <div id="login-screen" class="max-w-md mx-auto bg-white p-6 rounded shadow">
+    <h2 class="text-xl font-bold mb-4 text-center">Login</h2>
+    <input id="username" type="text" placeholder="Username" class="w-full mb-2 border px-3 py-2 rounded">
+    <input id="password" type="password" placeholder="Password" class="w-full mb-4 border px-3 py-2 rounded">
     <button onclick="login()" class="bg-blue-600 text-white w-full py-2 rounded">Login</button>
   </div>
-</div>
 
-<!-- APP -->
-<div id="app" class="hidden max-w-4xl mx-auto p-6 bg-white shadow rounded-xl mt-8" x-cloak>
-  <div class="flex justify-between items-center mb-6">
-    <h2 class="text-2xl font-bold">🔐 RSA QR Tool</h2>
-    <div class="flex items-center gap-3">
+  <!-- MAIN APP -->
+  <div id="app" class="hidden max-w-3xl mx-auto bg-white rounded-xl shadow-md p-6">
+    <div class="flex justify-between items-center mb-6">
+      <h2 class="text-2xl font-bold">🔐 RSA QR Tool</h2>
       <select id="menu" onchange="switchMenu()" class="border px-3 py-1 rounded">
         <option value="encrypt">🔒 Enkripsi</option>
         <option value="decrypt">🔓 Dekripsi</option>
       </select>
-      <button onclick="logout()" class="bg-gray-500 text-white px-3 py-1 rounded">🚪 Logout</button>
     </div>
-  </div>
 
-  <!-- ENCRYPT -->
-  <div id="encrypt-section">
+    <!-- RSA Keys -->
     <div class="grid grid-cols-3 gap-4 mb-4">
-      <input id="p" type="number" placeholder="p" class="border px-2 py-1 rounded">
-      <input id="q" type="number" placeholder="q" class="border px-2 py-1 rounded">
-      <input id="e" type="number" placeholder="e" class="border px-2 py-1 rounded">
+      <div>
+        <label class="text-sm">p (prime)</label>
+        <input type="number" id="p" class="w-full border px-2 py-1 rounded">
+      </div>
+      <div>
+        <label class="text-sm">q (prime)</label>
+        <input type="number" id="q" class="w-full border px-2 py-1 rounded">
+      </div>
+      <div>
+        <label class="text-sm">e (public exponent)</label>
+        <input type="number" id="e" class="w-full border px-2 py-1 rounded">
+      </div>
     </div>
-    <input id="plaintext" placeholder="Plaintext" class="w-full border px-2 py-1 rounded mb-4">
-    <button onclick="encrypt()" class="bg-green-600 text-white w-full py-2 rounded mb-4">🔐 Encrypt & Generate QR</button>
-    <div class="text-center mb-4">
-      <canvas id="qrcode-canvas" class="mx-auto"></canvas><br>
-      <button onclick="downloadQR()" class="bg-purple-600 text-white px-4 py-2 rounded mt-2">⬇️ Simpan QR</button>
+
+    <!-- ENCRYPT MENU -->
+    <div id="encrypt-section">
+      <div class="mb-4">
+        <label class="text-sm">Plaintext (ID Surat)</label>
+        <input type="text" id="plaintext" class="w-full border px-2 py-1 rounded">
+      </div>
+      <button onclick="encrypt()" class="bg-green-600 text-white px-4 py-2 rounded w-full mb-4">🔐 Encrypt & Generate QR</button>
+      <div class="text-center mb-6">
+        <canvas id="qrcode-canvas" class="mx-auto"></canvas>
+        <button onclick="downloadQR()" class="mt-2 bg-purple-600 text-white px-4 py-2 rounded">⬇ Simpan QR Code</button>
+      </div>
+    </div>
+
+    <!-- DECRYPT MENU -->
+    <div id="decrypt-section" class="hidden">
+      <div class="mb-4">
+        <label class="text-sm font-semibold">📷 Scan QR dengan Kamera:</label>
+        <button onclick="startCamera()" class="w-full mt-2 bg-blue-600 text-white px-4 py-2 rounded">📷 Mulai Kamera</button>
+        <video id="video" class="w-full mt-2 rounded border" autoplay></video>
+        <canvas id="qr-canvas" class="hidden"></canvas>
+      </div>
+
+      <div class="mb-4">
+        <label class="text-sm">Atau unggah gambar QR:</label>
+        <input type="file" accept="image/*" onchange="scanQR(event)" class="block mt-2">
+      </div>
+
+      <div class="mb-4">
+        <label class="text-sm">Ciphertext</label>
+        <textarea id="ciphertextInput" rows="3" class="w-full border px-2 py-1 rounded"></textarea>
+      </div>
+      <button onclick="decrypt()" class="bg-red-600 text-white px-4 py-2 rounded w-full mb-4">🔓 Dekripsi</button>
+      <div>
+        <label class="text-sm">Hasil Plaintext:</label>
+        <textarea id="decryptedText" rows="2" class="w-full border px-2 py-1 rounded bg-gray-100" readonly></textarea>
+      </div>
     </div>
   </div>
 
-  <!-- DECRYPT -->
-  <div id="decrypt-section" class="hidden">
-    <div class="grid grid-cols-3 gap-4 mb-4">
-      <input id="p_dec" type="number" placeholder="p" class="border px-2 py-1 rounded">
-      <input id="q_dec" type="number" placeholder="q" class="border px-2 py-1 rounded">
-      <input id="e_dec" type="number" placeholder="e" class="border px-2 py-1 rounded">
-    </div>
+  <!-- SCRIPT -->
+  <script>
+    const USERS = {
+      "admin": "1234",
+      "user": "abcd"
+    };
 
-    <!-- CAMERA SCAN -->
-    <div class="mb-4">
-      <label class="text-sm font-semibold">📸 Scan Kamera:</label><br>
-      <video id="video" class="border rounded w-full max-w-md mt-2" autoplay playsinline></video>
-      <canvas id="scan-canvas" class="hidden"></canvas><br>
-      <button onclick="startCamera()" class="bg-blue-600 text-white px-3 py-1 mt-2 rounded">▶️ Start</button>
-      <button onclick="stopCamera()" class="bg-red-600 text-white px-3 py-1 mt-2 ml-2 rounded">⏹️ Stop</button>
-    </div>
-
-    <!-- UPLOAD SCAN -->
-    <div class="mb-4">
-      <label class="text-sm font-semibold">🖼️ Upload QR:</label>
-      <input type="file" accept="image/*" onchange="scanQRFile(event)" class="block mt-1">
-    </div>
-
-    <textarea id="ciphertextInput" rows="4" class="w-full border px-2 py-1 rounded mb-4" placeholder="Ciphertext ..."></textarea>
-    <button onclick="decrypt()" class="bg-red-600 text-white w-full py-2 rounded mb-4">🔓 Decrypt</button>
-    <textarea id="decryptedText" rows="2" class="w-full border px-2 py-1 rounded bg-gray-100" readonly placeholder="Plaintext hasil ..."></textarea>
-  </div>
-</div>
-
-<script>
-/* ---------- LOGIN PERSISTENCE ---------- */
-const USERS = { admin: "1234", user1: "pass1" };
-document.addEventListener("DOMContentLoaded", () => {
-  if (localStorage.getItem("rsaLoggedIn") === "yes") showApp();
-});
-
-/* ---------- LOGIN / LOGOUT ---------- */
-function login() {
-  const u = username.value, p = password.value;
-  if (USERS[u] === p) {
-    localStorage.setItem("rsaLoggedIn", "yes");
-    showApp();
-  } else { alert("Username / Password salah"); }
-}
-function logout() {
-  stopCamera();
-  localStorage.removeItem("rsaLoggedIn");
-  app.classList.add("hidden");
-  login-screen.classList.remove("hidden");
-}
-/* ---------- UI SWITCH ---------- */
-function showApp() {
-  login-screen.classList.add("hidden");
-  app.classList.remove("hidden");
-}
-function switchMenu() {
-  const m = menu.value;
-  encrypt-section.classList.toggle("hidden", m !== "encrypt");
-  decrypt-section.classList.toggle("hidden", m !== "decrypt");
-}
-/* ---------- RSA CORE ---------- */
-function gcd(a,b){ while(b){[a,b]=[b,a%b]} return a }
-function modInv(e,phi){let [a,b,u]=[0,phi,1]; while(e){let q=Math.floor(b/e); [a,b,u,e]=[u,e,a-q*u,b-q*e]} return b===1?(a+phi)%phi:null}
-function getKeys(p,q,e){
-  if(!(p&&q&&e)) throw "p,q,e belum diisi";
-  const n=p*q, phi=(p-1)*(q-1);
-  if(gcd(e,phi)!==1) throw "e tidak coprime φ";
-  const d=modInv(e,phi); if(d===null) throw "invers tdk ada";
-  return {n:BigInt(n), e:BigInt(e), d:BigInt(d)};
-}
-/* ---------- ENCRYPT ---------- */
-function encrypt(){
-  try{
-    const {n,e}=getKeys(+p.value,+q.value,+e.value);
-    const ct=[...plaintext.value].map(ch=>{
-      const m=BigInt(ch.charCodeAt(0)); return (m**e%n).toString()
-    }).join(" ");
-    QRCode.toCanvas(qrcode-canvas,ct);
-  }catch(err){alert(err)}
-}
-function downloadQR(){
-  const link=document.createElement("a");
-  link.href=qrcode-canvas.toDataURL("image/png");
-  link.download="rsa_qr.png"; link.click();
-}
-/* ---------- DECRYPT ---------- */
-function decrypt(){
-  try{
-    const {n,d}=getKeys(+p_dec.value,+q_dec.value,+e_dec.value);
-    const pt=ciphertextInput.value.trim().split(" ").map(c=>{
-      return String.fromCharCode(Number(BigInt(c)**d%n))
-    }).join("");
-    decryptedText.value=pt;
-  }catch(err){alert("Dekripsi gagal: "+err)}
-}
-/* ---------- QR SCAN - UPLOAD ---------- */
-function scanQRFile(ev){
-  const file=ev.target.files[0]; if(!file) return;
-  const reader=new FileReader();
-  reader.onload=()=>{ const img=new Image(); img.onload=()=>{
-    const c=document.createElement("canvas"); c.width=img.width; c.height=img.height;
-    const ctx=c.getContext("2d"); ctx.drawImage(img,0,0);
-    const d=ctx.getImageData(0,0,c.width,c.height);
-    const code=jsQR(d.data,c.width,c.height);
-    if(code) ciphertextInput.value=code.data; else alert("QR tidak terbaca");
-  }; img.src=reader.result }; reader.readAsDataURL(file);
-}
-/* ---------- QR SCAN - CAMERA ---------- */
-let stream=null, scanning=false;
-function startCamera(){
-  if(stream){scanning=true; return;}
-  navigator.mediaDevices.getUserMedia({video:{facingMode:"environment"}})
-  .then(s=>{
-    stream=s; video.srcObject=s; scanning=true;
-    requestAnimationFrame(scanLoop);
-  }).catch(e=>alert("Kamera gagal: "+e));
-}
-function stopCamera(){ scanning=false; if(stream){stream.getTracks().forEach(t=>t.stop()); stream=null} }
-function scanLoop(){
-  if(!scanning||!stream) return;
-  if(video.readyState===4){
-    const canvas=scan-canvas, ctx=canvas.getContext("2d");
-    canvas.width=video.videoWidth; canvas.height=video.videoHeight;
-    ctx.drawImage(video,0,0,canvas.width,canvas.height);
-    const img=ctx.getImageData(0,0,canvas.width,canvas.height);
-    const code=jsQR(img.data,canvas.width,canvas.height);
-    if(code){
-      ciphertextInput.value=code.data; stopCamera(); return;
+    function login() {
+      const u = document.getElementById("username").value;
+      const p = document.getElementById("password").value;
+      if (USERS[u] && USERS[u] === p) {
+        document.getElementById("login-screen").classList.add("hidden");
+        document.getElementById("app").classList.remove("hidden");
+      } else {
+        alert("Login gagal. Username/password salah.");
+      }
     }
-  }
-  requestAnimationFrame(scanLoop);
-}
-</script>
+
+    function switchMenu() {
+      const menu = document.getElementById("menu").value;
+      document.getElementById("encrypt-section").classList.toggle("hidden", menu !== "encrypt");
+      document.getElementById("decrypt-section").classList.toggle("hidden", menu !== "decrypt");
+    }
+
+    function gcd(a, b) {
+      while (b !== 0) [a, b] = [b, a % b];
+      return a;
+    }
+
+    function modInverse(e, phi) {
+      let [a, b, u] = [0, phi, 1];
+      while (e > 0) {
+        let q = Math.floor(b / e);
+        [a, b, u, e] = [u, e, a - q * u, b - q * e];
+      }
+      if (b !== 1) return null;
+      return (a + phi) % phi;
+    }
+
+    function getKeys() {
+      const p = parseInt(document.getElementById("p").value);
+      const q = parseInt(document.getElementById("q").value);
+      const e = parseInt(document.getElementById("e").value);
+      if (!p || !q || !e) throw "Isi semua nilai p, q, dan e";
+
+      const n = p * q;
+      const phi = (p - 1) * (q - 1);
+      if (gcd(e, phi) !== 1) throw "e tidak coprime dengan φ(n)";
+      const d = modInverse(e, phi);
+      if (d === null) throw "Invers modular tidak ditemukan";
+
+      return { e: BigInt(e), d: BigInt(d), n: BigInt(n) };
+    }
+
+    function encrypt() {
+      try {
+        const { e, n } = getKeys();
+        const text = document.getElementById("plaintext").value;
+        const ciphertext = Array.from(text).map(ch => {
+          const m = BigInt(ch.charCodeAt(0));
+          const c = m ** e % n;
+          return c.toString();
+        }).join(" ");
+        QRCode.toCanvas(document.getElementById("qrcode-canvas"), ciphertext);
+      } catch (err) {
+        alert(err);
+      }
+    }
+
+    function downloadQR() {
+      const canvas = document.getElementById("qrcode-canvas");
+      const link = document.createElement("a");
+      link.href = canvas.toDataURL("image/png");
+      link.download = "qr_ciphertext.png";
+      link.click();
+    }
+
+    function scanQR(event) {
+      const file = event.target.files[0];
+      const reader = new FileReader();
+      reader.onload = function () {
+        const img = new Image();
+        img.onload = function () {
+          const canvas = document.createElement("canvas");
+          canvas.width = img.width;
+          canvas.height = img.height;
+          const ctx = canvas.getContext("2d");
+          ctx.drawImage(img, 0, 0);
+          const imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
+          const code = jsQR(imageData.data, canvas.width, canvas.height);
+          if (code) {
+            document.getElementById("ciphertextInput").value = code.data;
+          } else {
+            alert("QR tidak terbaca");
+          }
+        };
+        img.src = reader.result;
+      };
+      reader.readAsDataURL(file);
+    }
+
+    let videoStream;
+    let scanning = false;
+
+    function startCamera() {
+      const video = document.getElementById("video");
+      const canvas = document.getElementById("qr-canvas");
+      const ctx = canvas.getContext("2d");
+
+      navigator.mediaDevices.getUserMedia({ video: { facingMode: "environment" } })
+        .then(stream => {
+          videoStream = stream;
+          video.srcObject = stream;
+          video.setAttribute("playsinline", true);
+          video.play();
+          scanning = true;
+
+          requestAnimationFrame(function scanLoop() {
+            if (!scanning) return;
+            if (video.readyState === video.HAVE_ENOUGH_DATA) {
+              canvas.width = video.videoWidth;
+              canvas.height = video.videoHeight;
+              ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+              const imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
+              const code = jsQR(imageData.data, canvas.width, canvas.height);
+              if (code) {
+                scanning = false;
+                document.getElementById("ciphertextInput").value = code.data;
+                stopCamera();
+                return;
+              }
+            }
+            requestAnimationFrame(scanLoop);
+          });
+        })
+        .catch(err => alert("Gagal membuka kamera: " + err));
+    }
+
+    function stopCamera() {
+      if (videoStream) {
+        videoStream.getTracks().forEach(track => track.stop());
+      }
+    }
+
+    function decrypt() {
+      try {
+        const { d, n } = getKeys();
+        const ciphertext = document.getElementById("ciphertextInput").value.trim().split(" ");
+        const plain = ciphertext.map(c => {
+          const m = BigInt(c) ** d % n;
+          return String.fromCharCode(Number(m));
+        }).join("");
+        document.getElementById("decryptedText").value = plain;
+      } catch (err) {
+        alert("Gagal dekripsi: " + err);
+      }
+    }
+  </script>
 </body>
 </html>
